crates/tui/tests/storybook/snapshots/app_prompt__prompt_picker_with_queue_stash_and_notification.snap
---
source: crates/tui/tests/storybook/app_ctx.rs
expression: frame.text()
---
 /clear        start new conversation
 /changelog    show release notes for the latest s
 /btw          ask a side question
 /brief        summarize planned or completed chan
 /branch       fork current session
  › first follow-up
  › second follow-up
  ◌ Stashed (ctrl+s to unstash)
─ ✿ working… ─────────────────────────────────────
 /
──────────────────────────────────────────────────
 ○ normal                                 1:1 100%
