crates/tui/tests/storybook/snapshots/app_prompt__prompt_queued_messages_with_stash_collapse_on_short_terminal.snap
---
source: crates/tui/tests/storybook/app_ctx.rs
expression: frame.text()
---



  › follow-up 10
  +9 more queued
  ◌ Stashed (ctrl+s to unstash)
─ ✿ working… ─────────────────────────────────────

──────────────────────────────────────────────────
 ○ normal                                 1:1 100%
