crates/tui/tests/storybook/snapshots/app_prompt__prompt_queued_multiline_messages.snap
---
source: crates/tui/tests/storybook/app_ctx.rs
expression: frame.text()
---




  » first line second line third line
  › check: 日 本 語  and café then run the tests a…
  ◌ Stashed (ctrl+s to unstash)
─ ✿ working… ─────────────────────────────────────
 next draft
 second draft line
──────────────────────────────────────────────────
 ○ normal                                 1:1 100%
