crates/tui/tests/storybook/snapshots/app_prompt__prompt_slash_command_completion.snap
---
source: crates/tui/tests/storybook/app_ctx.rs
expression: frame.text()
---


 /copy         copy recent conversation message(s)
 /compact      compact conversation history
 /color        set session color
 /clear        start new conversation
 /changelog    show release notes for the latest s
 /btw          ask a side question
 /brief        summarize planned or completed chan
 /branch       fork current session
──────────────────────────────────────────────────
 /
──────────────────────────────────────────────────
 ○ normal                                 1:1 100%
