crates/tui/tests/storybook/snapshots/app_prompt__prompt_slash_completion_with_live_notification.styles.snap
---
source: crates/tui/tests/storybook/app_ctx.rs
expression: frame.styles_text()
---
dim: 50 8
  0   1  10 fg=AnsiValue(208)
  0  15  35 attrs=dim
  1   1   4 fg=AnsiValue(208)
  1  15  19 attrs=dim
  2   1   6 fg=AnsiValue(208)
  2  15  35 attrs=dim
  3   0   1 bg=AnsiValue(237)
  3   1   7 fg=AnsiValue(208) bg=AnsiValue(237)
  3   8   7 bg=AnsiValue(237)
  3  15  20 bg=AnsiValue(237) attrs=dim
  3  35  15 bg=AnsiValue(237)
  4   0  50 fg=AnsiValue(237)
  5   2   1 fg=Black bg=White
  6   0  50 fg=AnsiValue(237)
  7   0  10 fg=AnsiValue(244) bg=AnsiValue(234)
  7  10  32 bg=AnsiValue(233)
  7  42   8 fg=AnsiValue(244) bg=AnsiValue(233)
