crates/tui/tests/storybook/snapshots/app_prompt__prompt_slash_completion_with_stash_shrinks_for_short_terminal.snap
---
source: crates/tui/tests/storybook/app_ctx.rs
assertion_line: 515
expression: frame.text()
---
 /btw          ask a side question
 /brief        summarize planned or completed chan
 /branch       fork current session
  ◌ Stashed (ctrl+s to unstash)
──────────────────────────────────────────────────
 /
──────────────────────────────────────────────────
 ○ normal                                 1:1 100%
